@@ -24,6 +24,8 @@
 #ifndef NUT_UPSMON_H_SEEN
 #define NUT_UPSMON_H_SEEN 1
 
+#include "state.h"
+
 /* flags for ups->status */
 
 #define ST_ONLINE      (1 << 0)       /* UPS is on line (OL)                      */
@@ -39,6 +41,7 @@
 #define ST_BYPASS      (1 << 9)       /* UPS is on bypass so not protecting       */
 #define ST_ECO         (1 << 10)      /* UPS is in ECO (High Efficiency) mode or similar tweak, e.g. Energy Saver System mode */
 #define ST_ALARM       (1 << 11)      /* UPS has at least one active alarm        */
+#define ST_OTHER       (1 << 12)      /* UPS has at least one unclassified status token */
 
 /* required contents of flag file */
 #define SDMAGIC "upsmon-shutdown-file"
@@ -63,6 +66,7 @@ typedef struct {
 	char	*un;			/* username (optional for now)	*/
 	char	*pw;  			/* password from conf		*/
 	int	status;			/* status (see flags above)	*/
+	st_tree_t	*status_tokens;	/* parsed ups.status, mapping each token to whatever value if it is currently set (evicted when not) */
 	int	retain;			/* tracks deletions at reload	*/
 
 	/* handle suppression of COMMOK and ONLINE at startup */
@@ -116,6 +120,10 @@ typedef struct {
 #define NOTIFY_NOTECO	17	/* UPS is not anymore in ECO mode or similar */
 #define NOTIFY_ALARM	18	/* UPS has at least one active alarm    */
 #define NOTIFY_NOTALARM	19	/* UPS has no active alarms    */
+
+/* Special handling below */
+#define NOTIFY_OTHER	28	/* UPS has at least one unclassified status token */
+#define NOTIFY_NOTOTHER	29	/* UPS has no unclassified status tokens anymore */
 
 #define NOTIFY_SUSPEND_STARTING	30	/* OS is entering sleep/suspend/hibernate slumber mode, and we know it   */
 #define NOTIFY_SUSPEND_FINISHED	31	/* OS just finished sleep/suspend/hibernate slumber mode, and we know it */
@@ -174,6 +182,12 @@ static struct {
 	 */
 	{ NOTIFY_ALARM,    "ALARM",    NULL, "UPS %s: one or more active alarms (check ups.alarm)", NOTIFY_DEFAULT },
 	{ NOTIFY_NOTALARM, "NOTALARM", NULL, "UPS %s is no longer in an alarm state (no active alarms)", NOTIFY_DEFAULT },
+
+	/* Special handling, two string placeholders!
+	 * Reported when status_tokens tree changes (and is not empty in the end) */
+	{ NOTIFY_OTHER,    "OTHER",    NULL, "UPS %s: has at least one unclassified status token: [%s]", NOTIFY_DEFAULT },
+	/* Reported when status_tokens tree becomes empty */
+	{ NOTIFY_NOTOTHER, "NOTOTHER", NULL, "UPS %s has no unclassified status tokens anymore", NOTIFY_DEFAULT },
 
 	{ NOTIFY_SUSPEND_STARTING, "SUSPEND_STARTING", NULL, "OS is entering sleep/suspend/hibernate mode", NOTIFY_DEFAULT },
 	{ NOTIFY_SUSPEND_FINISHED, "SUSPEND_FINISHED", NULL, "OS just finished sleep/suspend/hibernate mode, de-activating obsolete UPS readings to avoid an unfortunate shutdown", NOTIFY_DEFAULT },
