@@ -1475,6 +1475,9 @@ public:
 		NOTIFY_ALARM,
 		NOTIFY_NOTALARM,
 
+		NOTIFY_OTHER = 28,
+		NOTIFY_NOTOTHER,
+
 		NOTIFY_SUSPEND_STARTING = 30,
 		NOTIFY_SUSPEND_FINISHED,
 
